Updated stylesheet with dateline and socialLinks parameters, and I fixed float and spacing issues.

--- a/Destination_Mark/style.css
+++ b/Destination_Mark/style.css
@@ -1,8 +1,8 @@
 #upShotNamePlate {
 	float: left;
 	display: block;
-	margin-bottom: 15px;
-	margin-left: 0px;
+	margin-bottom: 0px;
+	margin-left: 200px;
 	margin-right: 0px;
 	margin-top: 15px;
 	width: 100%;
@@ -11,13 +11,13 @@
 #mastheadLineBreak{
 	display: block;
 	float: left;
-    	height: 1px;
-    	background: #000000;
-    	margin-bottom: 15px;
-	margin-left: 0px;
+    height: 1px;
+    background: #000000;
+    margin-bottom: 0px;
+	margin-left: 200px;
 	margin-right: 0px;
-	margin-top: 15px;
-	width:100%;	
+	margin-top: 10px;
+	width:80%;	
 }
 
 #chartTitle {
@@ -30,11 +30,11 @@
 	font-size: 2.25rem;
 	line-height: 2.5rem;
 	font-weight: 300;
-	margin-bottom: 5px;
-	margin-left: 0px;
+	margin-bottom: 0px;
+	margin-left: 200px;
 	margin-right: 0px;
-	margin-top: 0px;
-	width: 100%;
+	margin-top: 25px;
+	width: 80%;
 }
 
 #chartSubTitle{
@@ -47,29 +47,29 @@
  	letter-spacing: normal;
   	line-height: 17px;
   	margin-bottom: 10px;
-  	margin-left: 0px;
+  	margin-left: 200px;
 	margin-right: 0px;
 	margin-top: 0px;
   	width: 100%;
 }
 
 #titleLineBreak{
-	display: block;
 	float: left;
-    	height: 1px;
-    	background: #D3D3D3;
-    	margin-bottom: 15px;
-	margin-left: 0px;
+	display: block;
+    height: 1px;
+    background: #D3D3D3;
+    margin-bottom: 15px;
+	margin-left: 200px;
 	margin-right: 0px;
-	margin-top: 15px;
-	width:100%;	
+	margin-top: 8px;
+	width:80%;	
 }
 
 .visualizationImage {
 	float: left;
 	display: block;
 	margin-bottom: 5px;
-	margin-left: 5px;
+	margin-left: 200px;
 	margin-right: 0px;
 	margin-top: 0px;
 	width: 100%;	
@@ -77,6 +77,8 @@
 
 
 #chartSource {
+	float: left;
+	display: block;
 	color: rgb(153, 153, 153);
 	display: block;
   	font-family: arial;
@@ -85,24 +87,61 @@
   	height: 14px;
   	line-height: 14px;
   	margin-bottom: 15px;
-  	margin-left: 5px;
+  	margin-left: 200px;
   	margin-right: 0px;
   	margin-top: 0px;
   	width: 100%;
 }
 
 
+#dateLine {
+	float: left;
+	display: block;
+ 	font-size: 0.6875rem;
+  	line-height: 0.75rem;
+ 	font-weight: 300;
+ 	font-family: arial;
+  	color: #000;
+  	line-height: 14px;
+  	margin-bottom: 15px;
+  	margin-left: 200px;
+  	margin-right: 0px;
+  	margin-top: 0px;
+  	width: 100%;	
+}
+
+#socialLinks{
+	float: left;
+	display: inline;
+	width: 10%;
+	margin-bottom: 15px;
+  	margin-left: 200px;
+  	margin-right: 0px;
+  	margin-top: 15px;	
+}
+
+
 .bodyCopy {
+	float: left;
+	display: block;
 	color: rgb(51, 51, 51);
-  	display: block;
   	font-family: georgia, 'times new roman', times, serif;
   	font-size: 16px;
   	font-weight: normal;
   	line-height: 23px;
   	margin-bottom: 10px;
-  	margin-left: 5px;
+  	margin-left: 10px;
   	margin-right: 0px;
   	max-width: 540px;
 }
 
+#mainCopyContainer{
+	float: left;
+	display: inline;
+	width: 90%;
+	margin-bottom: 15px;
+  	margin-left: 10px;
+  	margin-right: 0px;
+  	margin-top: 15px;
+}
 
